--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 # Xliff-tasks
 Set of tasks and targets to generate xliff files.
+
+Build Status
+------------
+
+|Windows x64 |
+[win-x64-build-badge]: https://devdiv.visualstudio.com/_apis/public/build/definitions/0bdbc590-a062-4c3f-b0f6-9383f67865ee/5803/badge
+[win-x64-build]: https://devdiv.visualstudio.com/DevDiv/_build/index?definitionId=5803&_a=completed
